--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Block Renovation - take home assignment",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,10 @@
   "bugs": {
     "url": "https://github.com/claygifford/block-renovation/issues"
   },
-  "homepage": "https://github.com/claygifford/block-renovation#readme"
+  "homepage": "https://github.com/claygifford/block-renovation#readme",
+  "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
+    "jest": "^28.0.2"
+  },
+  "type": "module"
 }
